--- a/soutzeu/index.html
+++ b/soutzeu/index.html
@@ -112,7 +112,7 @@
                 <input type="radio" class="btn-check" name="options5" id="option52" autocomplete="off">
                 <label class="btn btn-primary" for="option52" onclick="select(5,2)">B.批评</label>
                 <input type="radio" class="btn-check" name="options5" id="option53" autocomplete="off">
-                <label class="btn btn-primary" for="option53" onclick="select(5,3)">C.批评</label>
+                <label class="btn btn-primary" for="option53" onclick="select(5,3)">C.忧伤</label>
                 <input type="radio" class="btn-check" name="options5" id="option54" autocomplete="off">
                 <label class="btn btn-primary" for="option54" onclick="select(5,4)">D.喜悦</label>
             </div>
