--- a/soutzeu/index.html
+++ b/soutzeu/index.html
@@ -22,7 +22,7 @@
                 <input type="radio" class="btn-check" name="options1" id="option11" autocomplete="off">
                 <label class="btn btn-primary" for="option11" onclick="select(1,1)">A.吃川菜</label>
                 <input type="radio" class="btn-check" name="options1" id="option12" autocomplete="off">
-                <label class="btn btn-primary" for="option12" onclick="select(1,2)">B.吃苦，倒霉</label>
+                <label class="btn btn-primary" for="option12" onclick="select(1,2)">B.吃苦头</label>
                 <input type="radio" class="btn-check" name="options1" id="option13" autocomplete="off">
                 <label class="btn btn-primary" for="option13" onclick="select(1,3)">C.生气</label>
                 <input type="radio" class="btn-check" name="options1" id="option14" autocomplete="off">
