--- a/soutzeu/index.html
+++ b/soutzeu/index.html
@@ -238,7 +238,7 @@
                 </div>
                 <h1>你已经答题完毕</h1>
             </div>
-            <div class="card-body d-grid gap-2 col-6 mx-auto">
+            <div class="card-body d-grid gap-2">
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1">你的昵称是</span>
                     <input id="name" type="text" class="form-control" placeholder="输入你的昵称" aria-label="Username" aria-describedby="basic-addon1">
