--- a/soutzeu/index.html
+++ b/soutzeu/index.html
@@ -136,7 +136,7 @@
                 <input type="radio" class="btn-check" name="options6" id="option63" autocomplete="off">
                 <label class="btn btn-primary" for="option63" onclick="select(6,3)">C.正直</label>
                 <input type="radio" class="btn-check" name="options6" id="option64" autocomplete="off">
-                <label class="btn btn-primary" for="option64" onclick="select(6,4)">D.古板</label>
+                <label class="btn btn-primary" for="option64" onclick="select(6,4)">D.死板</label>
             </div>
             <div class="card-footer">
                 <button type="button" class="btn btn-outline-secondary" onclick="back(6)">上一题</button>
@@ -281,7 +281,7 @@
     </div>
     <script>
         var ans = new Array();
-        var correct_ans = [2, 4, 2, 1, 2, 3, 1, 4, 4, 2];
+        var correct_ans = [2, 4, 2, 1, 2, 4, 1, 4, 4, 2];
 
         function back(q) {
             document.getElementById('q' + q).style.display = 'none';
