--- a/ar.html
+++ b/ar.html
@@ -71,7 +71,7 @@
                             <i class="moji moji-github"></i>
                         </div>
                         <div class="card-body">
-                            <div id="cont"></div>
+                            <img src="https://estela.moe/fetchgraph.php" />
                             <img src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true" />
                         </div>
                     </div>
@@ -90,9 +90,6 @@
 </body>
 <script>
 document.getElementById("year").innerHTML = new Date().getFullYear();
-var xmlHttp = new XMLHttpRequest();
-    xmlHttp.open( "GET", "https://estela.cn/fetchgraph.php", false ); // false for synchronous request
-    xmlHttp.send( null );
-    document.getElementById("cont").innerHTML = xmlHttp.responseText;
+
 </script>
 </html>
