--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                         <p>👀 Interested in linguistics, NLP and ML, and other things.</p>
                         <p>⌨️ <i class="moji moji-python"></i>Python <i class="moji moji-php"></i>PHP</p>
                         <p><i class="moji moji-archlinux"></i>ArchLinux user.</p>
+                        <p><img src="assets/images/feed.png"/><br/>投食山前(Donate via AliPay and WeChat)</p>
                     </div>
                 </div>
             </div>
@@ -73,7 +74,7 @@
                             <i class="moji moji-github"></i>
                         </div>
                         <div class="card-body">
-                            <div id="cont"></div>
+                            <img src="https://estela.moe/fetchgraph.php" />
                             <img src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true" />
                         </div>
                     </div>
@@ -92,9 +93,5 @@
 </body>
 <script>
 document.getElementById("year").innerHTML = new Date().getFullYear();
-var xmlHttp = new XMLHttpRequest();
-    xmlHttp.open( "GET", "https://estela.cn/fetchgraph.php", false ); // false for synchronous request
-    xmlHttp.send( null );
-    document.getElementById("cont").innerHTML = xmlHttp.responseText;
 </script>
 </html>
