--- a/zht.html
+++ b/zht.html
@@ -59,6 +59,7 @@
                         <p>⌨️ <i class="moji moji-python"></i>Python 一把梭</p>
                         <p><del>「<i class="moji moji-php"></i>PHP 是世界上最好的語言！」</del></p>
                         <p><i class="moji moji-archlinux"></i>ArchLinux 用戶。</p>
+                        <p><img src="assets/images/feed.png"/><br/>投食山前</p>
                     </div>
                 </div>
             </div>
@@ -69,7 +70,7 @@
                             <i class="moji moji-github"></i>
                         </div>
                         <div class="card-body">
-                            <div id="cont"></div>
+                            <img src="https://estela.moe/fetchgraph.php" />
                             <img src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true" />
                         </div>
                     </div>
@@ -88,9 +89,6 @@
 </body>
 <script>
 document.getElementById("year").innerHTML = new Date().getFullYear();
-var xmlHttp = new XMLHttpRequest();
-    xmlHttp.open( "GET", "https://estela.cn/fetchgraph.php", false ); // false for synchronous request
-    xmlHttp.send( null );
-    document.getElementById("cont").innerHTML = xmlHttp.responseText;
+
 </script>
 </html>
