--- a/zh.html
+++ b/zh.html
@@ -1,94 +1,150 @@
 <!DOCTYPE html>
 <html class="h-100" lang="zh-Hans">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>山前的主页</title>
-    <link href="assets/moji.css" rel="stylesheet">
-    <link href="assets/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/contribution.css" rel="stylesheet">
-</head>
+    <link href="assets/moji.css" rel="stylesheet" />
+    <link href="assets/bootstrap.min.css" rel="stylesheet" />
+  </head>
 
-<body class="d-flex flex-column h-100">
+  <body class="d-flex flex-column h-100">
     <header class="header">
-        <div class="container navbar d-flex">
-            <nav class="justify-content-start" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="index.html"><i class="moji moji-uk"></i>English</a></li>
-                    <li class="breadcrumb-item active"><i class="moji moji-cn"></i>中文</li>
-                    <li class="breadcrumb-item"><a href="es.html"><i class="moji moji-es"></i>Español</a></li>
-                    <li class="breadcrumb-item"><a href="ar.html"><i class="moji moji-ar"></i>العربية</a></li>
-                </ol>
-            </nav>
-            <div class="btn-group justify-content-end">
-                <a href="zht.html" class="btn btn-outline-primary btn-sm">漢</a>
-                <a class="btn btn-outline-primary btn-sm active">汉</a>
-            </div>
+      <div class="container navbar d-flex">
+        <nav class="justify-content-start" aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+              <a href="index.html"><i class="moji moji-uk"></i>English</a>
+            </li>
+            <li class="breadcrumb-item active">
+              <i class="moji moji-cn"></i>中文
+            </li>
+            <li class="breadcrumb-item">
+              <a href="es.html"><i class="moji moji-es"></i>Español</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
+            </li>
+          </ol>
+        </nav>
+        <div class="btn-group justify-content-end">
+          <a href="zht.html" class="btn btn-outline-primary btn-sm">漢</a>
+          <a class="btn btn-outline-primary btn-sm active">汉</a>
         </div>
+      </div>
     </header>
     <main class="flex-shrink-0">
-        <div class="container d-grid gap-3">
-            <div class="container-fluid d-flex justify-content-center">
-                <div class="card" style="position:relative;margin-top:80px;">
-                    <img src="assets/images/head.jpg" style="height: 100px;width: 100x; position: absolute; top:-50px;left:30px;border-radius: 50%;border: 1px solid #ddd" />
-                    <span class="badge rounded-pill bg-secondary border-3" style="position: absolute;left:105px;top:-25px">😔 抑郁中</span>
-                    <div class="card-body">
-                        <h2 class="card-title" style="margin-left: 130px;">山前</h2>
-                        <table>
-                            <tr>
-                                <td><a href="https://github.com/saeziae"><i class="moji moji-github"></i>GitHub saeziae</a></td>
-                                <td><a href="https://twitter.com/saeziae"><i class="moji moji-twitter"></i>Twitter @saeziae</a></td>
-                            </tr>
-                            <tr>
-                                <td> <a href="mailto:i@estela.cn"><i class="moji moji-mail"></i>i@estela.cn</a></td>
-                                <td><a href="https://t.me/esteladaily"><i class="moji moji-telegram"></i>Telegram 群</a></td>
-                            </tr>
-                            <tr>
-                                <td><a href="https://space.bilibili.com/173947605"><i class="moji moji-bilibili"></i>哔哩哔哩</a></td>
-                                <td><a href="https://www.youtube.com/channel/UCnqO6MvMqQ9pXKcwjp_gLBQ"><i class="moji moji-youtube"></i>YouTube</a></td>
-                            </tr>
-                        </table>
-                        <p> 你好呀 👋🏻 这边是山前 </p>
-                        <p><i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i> 跨儿骄傲。 <a href="https://mtf.wiki/">MtF-Wiki</a>维护人员。</p>
-                        <p> JK格裙那可太喜欢了 🍱吃货 吴语母语者</p>
-                        <p>👩🏻‍🎓 现在在大学攻读西班牙语。</p>
-                        <p>📷 摄影。音游，<i class="moji moji-maimai"></i>maimai陷入中，SDVX练习中。</p>
-                        <p>✈️ 想要周游世界的旅行者，去过好多国家了。</p>
-                        <p>👀 喜欢语言学、NLP、炼丹之类乱七八糟的东西。</p>
-                        <p>⌨️ <i class="moji moji-python"></i>Python 一把梭</p>
-                        <p> <del>“<i class="moji moji-php"></i>PHP 是世界上最好的语言！”你妈的太坑了</del></p>
-                        <p><i class="moji moji-archlinux"></i>ArchLinux 用户。</p>
-                        <p><img src="assets/images/feed.png"/><br/>投食山前</p>
-                    </div>
-                </div>
+      <div class="container d-grid gap-3">
+        <div class="container-fluid d-flex justify-content-center">
+          <div class="card" style="position: relative; margin-top: 80px">
+            <img
+              src="assets/images/head.jpg"
+              style="
+                height: 100px;
+                width: 100x;
+                position: absolute;
+                top: -50px;
+                left: 30px;
+                border-radius: 50%;
+                border: 1px solid #ddd;
+              "
+            />
+            <span
+              class="badge rounded-pill bg-secondary border-3"
+              style="position: absolute; left: 105px; top: -25px"
+              >😔 抑郁中</span
+            >
+            <div class="card-body">
+              <h2 class="card-title" style="margin-left: 130px">山前</h2>
+              <table>
+                <tr>
+                  <td>
+                    <a href="https://github.com/saeziae"
+                      ><i class="moji moji-github"></i>GitHub saeziae</a
+                    >
+                  </td>
+                  <td>
+                    <a href="https://twitter.com/saeziae"
+                      ><i class="moji moji-twitter"></i>Twitter @saeziae</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="mailto:i@estela.cn"
+                      ><i class="moji moji-mail"></i>i@estela.cn</a
+                    >
+                  </td>
+                  <td>
+                    <a href="https://t.me/esteladaily"
+                      ><i class="moji moji-telegram"></i>Telegram 群</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="https://space.bilibili.com/173947605"
+                      ><i class="moji moji-bilibili"></i>哔哩哔哩</a
+                    >
+                  </td>
+                  <td>
+                    <a
+                      href="https://www.youtube.com/channel/UCnqO6MvMqQ9pXKcwjp_gLBQ"
+                      ><i class="moji moji-youtube"></i>YouTube</a
+                    >
+                  </td>
+                </tr>
+              </table>
+              <p>你好呀 👋🏻 这边是山前</p>
+              <p>
+                <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i>
+                跨儿骄傲。 <a href="https://mtf.wiki/">MtF-Wiki</a>维护人员。
+              </p>
+              <p>JK格裙那可太喜欢了 🍱吃货 吴语母语者</p>
+              <p>👩🏻‍🎓 现在在大学攻读西班牙语。</p>
+              <p>
+                📷 摄影。音游，<i class="moji moji-maimai"></i
+                >maimai陷入中，SDVX练习中。
+              </p>
+              <p>✈️ 想要周游世界的旅行者，去过好多国家了。</p>
+              <p>👀 喜欢语言学、NLP、炼丹之类乱七八糟的东西。</p>
+              <p>⌨️ <i class="moji moji-python"></i>Python 一把梭</p>
+              <p>
+                <del
+                  >“<i class="moji moji-php"></i>PHP
+                  是世界上最好的语言！”你妈的太坑了</del
+                >
+              </p>
+              <p><i class="moji moji-archlinux"></i>ArchLinux 用户。</p>
+              <p><img src="assets/images/feed.png" /><br />投食山前</p>
             </div>
-            <div class="container d-grid gap-3">
-                <div class="container-fluid d-flex justify-content-center">
-                    <div class="card">
-                        <div class="card-header">
-                            <i class="moji moji-github"></i>
-                        </div>
-                        <div class="card-body">
-                            <img src="https://estela.moe/fetchgraph.php" />
-                            <img src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true" />
-                        </div>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
+        <div class="container-fluid d-flex justify-content-center">
+          <div class="card">
+            <div class="card-header">
+              <i class="moji moji-github"></i>
+            </div>
+            <div class="card-body">
+              <img src="https://estela.moe/fetchgraph.php" />
+              <img
+                src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="footer mt-auto py-3 bg-light">
-        <div class="container">
-            <span class="text-muted">
-                &copy;<span id="year"></span> Estela
-            </span>
-        </div>
+      <div class="container">
+        <span class="text-muted">
+          &copy;<span id="year"></span> 山前 <a href="amigos.html">友情链接</a>
+        </span>
+      </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
-</body>
-<script>
-document.getElementById("year").innerHTML = new Date().getFullYear();
-
-</script>
+  </body>
+  <script>
+    document.getElementById("year").innerHTML = new Date().getFullYear();
+  </script>
 </html>
