--- a/index.html
+++ b/index.html
@@ -1,97 +1,149 @@
 <!DOCTYPE html>
 <html class="h-100" lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Homepage of Estela (Promontana)</title>
-    <link href="assets/moji.css" rel="stylesheet">
-    <link href="assets/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/contribution.css" rel="stylesheet">
-</head>
+    <link href="assets/moji.css" rel="stylesheet" />
+    <link href="assets/bootstrap.min.css" rel="stylesheet" />
+  </head>
 
-<body class="d-flex flex-column h-100">
+  <body class="d-flex flex-column h-100">
     <header class="header">
-        <div class="container navbar d-flex">
-            <nav class="justify-content-start" aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                    <li class="breadcrumb-item active"><i class="moji moji-uk"></i>English</li>
-                    <li class="breadcrumb-item"><a href="zh.html"><i class="moji moji-cn"></i>中文</a></li>
-                    <li class="breadcrumb-item"><a href="es.html"><i class="moji moji-es"></i>Español</a></li>
-                    <li class="breadcrumb-item"><a href="ar.html"><i class="moji moji-ar"></i>العربية</a></li>
-                </ol>
-            </nav>
-        </div>
+      <div class="container navbar d-flex">
+        <nav class="justify-content-start" aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item active">
+              <i class="moji moji-uk"></i>English
+            </li>
+            <li class="breadcrumb-item">
+              <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="es.html"><i class="moji moji-es"></i>Español</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
+            </li>
+          </ol>
+        </nav>
+      </div>
     </header>
     <main class="flex-shrink-0">
-        <div class="container d-grid gap-3">
-            <div class="container-fluid d-flex justify-content-center">
-                <div class="card" style="position:relative;margin-top:80px;">
-                    <img src="assets/images/head.jpg"
-                        style="height: 100px;width: 100x; position: absolute; top:-50px;left:30px;border-radius: 50%;border: 1px solid #ddd" />
-                    <span class="badge rounded-pill bg-secondary border-3"
-                        style="position: absolute;left:105px;top:-25px">😔 Depression</span>
-                    <div class="card-body">
-                        <h2 class="card-title" style="margin-left: 130px;">Estela (Promontana)</h2>
-                        <table>
-                            <tr>
-                                <td><a href="https://github.com/saeziae"><i class="moji moji-github"></i>GitHub
-                                        saeziae</a></td>
-                                <td><a href="https://twitter.com/saeziae"><i class="moji moji-twitter"></i>Twitter
-                                        @saeziae</a></td>
-                            </tr>
-                            <tr>
-                                <td> <a href="mailto:i@estela.cn"><i class="moji moji-mail"></i>i@estela.cn</a></td>
-                                <td><a href="https://t.me/esteladaily"><i class="moji moji-telegram"></i>Telegram
-                                        Group</a></td>
-                            </tr>
-                            <tr>
-                                <td><a href="https://space.bilibili.com/173947605"><i
-                                            class="moji moji-bilibili"></i>Bilibili</a></td>
-                                <td><a href="https://www.youtube.com/channel/UCnqO6MvMqQ9pXKcwjp_gLBQ"><i
-                                            class="moji moji-youtube"></i>YouTube</a></td>
-                            </tr>
-                        </table>
-                        <p> Hi there 👋🏻 Here is Estela. </p>
-                        <p><i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i> Proudly being trans.
-                            Maintainer of <a href="https://mtf.wiki/">MtF-Wiki</a>.</p>
-                        <p>Skirt(JKs) lover. 🍱 "Gourmet". Wu language native speaker.</p>
-                        <p>👩🏻‍🎓 Majoring in Spanish language at university.</p>
-                        <p>📷 Photographer. Rhythm game player, now stuck on <i class="moji moji-maimai"></i>maimai and
-                            Sound Voltex.</p>
-                        <p>✈️ I love travelling! I've travelled to many countries.</p>
-                        <p>👀 Interested in linguistics, NLP and ML, and other things.</p>
-                        <p>⌨️ <i class="moji moji-python"></i>Python <i class="moji moji-php"></i>PHP</p>
-                        <p><i class="moji moji-archlinux"></i>ArchLinux user.</p>
-                        <p><img src="assets/images/feed.png"/><br/>投食山前(Donate via AliPay and WeChat)</p>
-                    </div>
-                </div>
+      <div class="container d-grid gap-3">
+        <div class="container-fluid d-flex justify-content-center">
+          <div class="card" style="position: relative; margin-top: 80px">
+            <img
+              src="assets/images/head.jpg"
+              style="
+                height: 100px;
+                width: 100x;
+                position: absolute;
+                top: -50px;
+                left: 30px;
+                border-radius: 50%;
+                border: 1px solid #ddd;
+              "
+            />
+            <span
+              class="badge rounded-pill bg-secondary border-3"
+              style="position: absolute; left: 105px; top: -25px"
+              >😔 Depression</span
+            >
+            <div class="card-body">
+              <h2 class="card-title" style="margin-left: 130px">
+                Estela (Promontana)
+              </h2>
+              <table>
+                <tr>
+                  <td>
+                    <a href="https://github.com/saeziae"
+                      ><i class="moji moji-github"></i>GitHub saeziae</a
+                    >
+                  </td>
+                  <td>
+                    <a href="https://twitter.com/saeziae"
+                      ><i class="moji moji-twitter"></i>Twitter @saeziae</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="mailto:i@estela.cn"
+                      ><i class="moji moji-mail"></i>i@estela.cn</a
+                    >
+                  </td>
+                  <td>
+                    <a href="https://t.me/esteladaily"
+                      ><i class="moji moji-telegram"></i>Telegram Group</a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="https://space.bilibili.com/173947605"
+                      ><i class="moji moji-bilibili"></i>Bilibili</a
+                    >
+                  </td>
+                  <td>
+                    <a
+                      href="https://www.youtube.com/channel/UCnqO6MvMqQ9pXKcwjp_gLBQ"
+                      ><i class="moji moji-youtube"></i>YouTube</a
+                    >
+                  </td>
+                </tr>
+              </table>
+              <p>Hi there 👋🏻 Here is Estela.</p>
+              <p>
+                <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i>
+                Proudly being trans. Maintainer of
+                <a href="https://mtf.wiki/">MtF-Wiki</a>.
+              </p>
+              <p>Skirt(JKs) lover. 🍱 "Gourmet". Wu language native speaker.</p>
+              <p>👩🏻‍🎓 Majoring in Spanish language at university.</p>
+              <p>
+                📷 Photographer. Rhythm game player, now stuck on
+                <i class="moji moji-maimai"></i>maimai and Sound Voltex.
+              </p>
+              <p>✈️ I love travelling! I've travelled to many countries.</p>
+              <p>👀 Interested in linguistics, NLP and ML, and other things.</p>
+              <p>
+                ⌨️ <i class="moji moji-python"></i>Python
+                <i class="moji moji-php"></i>PHP
+              </p>
+              <p><i class="moji moji-archlinux"></i>ArchLinux user.</p>
+              <p>
+                <img src="assets/images/feed.png" /><br />投食山前(Donate via
+                AliPay and WeChat)
+              </p>
             </div>
-            <div class="container d-grid gap-3">
-                <div class="container-fluid d-flex justify-content-center">
-                    <div class="card">
-                        <div class="card-header">
-                            <i class="moji moji-github"></i>
-                        </div>
-                        <div class="card-body">
-                            <img src="https://estela.moe/fetchgraph.php" />
-                            <img src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true" />
-                        </div>
-                    </div>
-                </div>
-            </div>
+          </div>
         </div>
+        <div class="container-fluid d-flex justify-content-center">
+          <div class="card">
+            <div class="card-header">
+              <i class="moji moji-github"></i>
+            </div>
+            <div class="card-body">
+              <img src="https://estela.moe/fetchgraph.php" />
+              <img
+                src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="footer mt-auto py-3 bg-light">
-        <div class="container">
-            <span class="text-muted">
-                &copy;<span id="year"></span> Estela
-            </span>
-        </div>
+      <div class="container">
+        <span class="text-muted">
+          &copy;<span id="year"></span> Estela <a href="amigos.html">Friends</a>
+        </span>
+      </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
-</body>
-<script>
-document.getElementById("year").innerHTML = new Date().getFullYear();
-</script>
+  </body>
+  <script>
+    document.getElementById("year").innerHTML = new Date().getFullYear();
+  </script>
 </html>
