--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Homepage of Estela (Promontana)</title>
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
+    <style>
+      .card img{
+        max-width: 100%;
+      }
+    </style>
   </head>
 
   <body class="d-flex flex-column h-100">
