--- a/zh.html
+++ b/zh.html
@@ -6,6 +6,11 @@
     <title>山前的主页</title>
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
+    <style>
+      .card img{
+        max-width: 100%;
+      }
+    </style>
   </head>
 
   <body class="d-flex flex-column h-100">
@@ -138,7 +143,8 @@
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
         <span class="text-muted">
-          &copy;<span id="year"></span> 山前 <a href="amigos.html">友情链接</a>
+          &copy;<span id="year"></span> 山前 <a href="amigos.html">友情链接</a><br>
+          <a href="https://icp.gov.moe/?keyword=20223233" target="_blank">萌ICP备20223233号</a>
         </span>
       </div>
     </footer>
